# rays-rs

./: .gitignore  .rustfmt.toml  Cargo.toml
lib/oidn/: Cargo.toml
lib/oidn-sys/: Cargo.toml  build.rs  wrapper.h
lib/oidn-sys/src/: lib.rs
lib/oidn/src/: device.rs  filter.rs  lib.rs
src/: aggregate.rs  camera.rs  framebuf.rs  geom.rs  lib.rs  macros.rs  main.rs  material.rs  metrics.rs  prims.rs  scene.rs  shape.rs  shapes.rs  types.rs  util.rs  xx_material.rs  xx_shapes.rs
