[package]
name = "rays-rs"
version = "0.1.0"
authors = ["Sergey Grankin <sgrankin@gmail.com>"]
edition = "2018"

[dependencies]
image = "*"
log = "*"
rand = "*"
rayon = "*"
simple_logger = "*"
sdl2 = "*"
num = "*"
tacho = "*"
hdrsample = "*"

[dependencies.cgmath]
version = "*"
features = ["swizzle"]

[profile.release]
debug = true
