[package]
name = "rays-rs"
version = "0.1.0"
authors = ["Sergey Grankin <sgrankin@gmail.com>"]
edition = "2018"

[dependencies]
image = "*"
log = "*"
rand = {version="*", features=["small_rng"]}
rayon = "*"
simple_logger = "*"
sdl2 = "*"
num = "*"
tacho = "*"
hdrsample = "~3"
oidn = {path="lib/oidn"}
failure = "*"

[dependencies.cgmath]
version = "*"
features = ["swizzle"]

[profile.release]
debug = true

[workspace]